<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dodi</string>
    <string name="action_settings">Settings</string>
    <string name="button1">cBT</string>
    <string name="button2">send</string>
    <string name="button3">Free</string>
    <string name="button4">Pend</string>
    <string name="button5">InvP</string>
    <string name="zero">Zero</string>
    
    
</resources>
